Bug 154875 - "Use slide background" area fill keeps coming back in sidebar, transparency slider gone
Summary: "Use slide background" area fill keeps coming back in sidebar, transparency s...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.4.4.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar-Properties-Area
  Show dependency treegraph
 
Reported: 2023-04-17 23:51 UTC by stragu
Modified: 2024-08-25 20:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-04-17 23:51:05 UTC
Steps to reproduce:
1. Open Draw or Writer
2. Insert a shape
3. Set area fill to "Use Slide Background" in sidebar
4. Set it back to "Color"

Result: sidebar's transparency slider is gone. Clicking out of the shape and selecting it again makes the setting go back to "Use Slide Background", even though Color is still active on canvas.

In:

Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 1b06f35de68a555b85bceb5fc29d1a5f426f4bb7
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Calc: threaded

Bibisected with linux-64-7.4 repo to first bad commit 478fd06265ded7669db2ff092db37513de528270 which points to core commit 8f0d52d122024d1ed0bd5f59d36e3ade5b7b5629 which is a cherrypick of:

commit 490c2fc6080aa652b9b31385517aaf536f5bbd57
author	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Nov 03 10:56:47 2022 +0100
committer	Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>	Thu Nov 03 14:22:42 2022 +0100
tdf#151174 Hide transparency widgets when not needed
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/142221

Samuel, can you please have a look?
Comment 1 Aron Budea 2023-04-18 05:13:36 UTC
Confirmed using LO 7.6.0.0.alpha0+ (60bce1af8aab2115d603781193bb659b35d1aedb) / Ubuntu.
Comment 2 Samuel Mehrbrodt 2023-09-04 11:18:25 UTC
Please remember to put my name in the "Regression by" field so that it pops up in my query.
Comment 3 stragu 2023-09-04 12:15:18 UTC
Apologies, Samuel. I usually do, but it's easily overlooked when bibisecting from scratch as the field is not in the submission form.
Comment 4 Commit Notification 2023-09-04 14:11:05 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/d4cebb60c7757086fd737e7a2134326209bd4190

tdf#154875 "Use slide background" is only for Impress

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 stragu 2023-09-05 13:27:02 UTC
Verified the fix in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 410632ac4b8a280e0993e665ffa9cfede8326b49
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Thank you!
Comment 6 Commit Notification 2023-09-14 16:21:18 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0136973a355270b4ef4db02266352d4548028e1d

tdf#154875 "Use slide background" is only for Impress

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.