tdf#154875 "Use slide background" is only for Impress

Change-Id: I078437a1cff58b868f4db4b482ad2aff335dc965
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156514
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit d4cebb60c7757086fd737e7a2134326209bd4190)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156535
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>